exports[`test the subscription component matches the snapshot 1`] = `
<span>
  <img
    aria-label="Test is active"
    className="dhzOCo"
    role="img"
    src="test.jpg" />
  <img
    aria-label="Test2 is active"
    className="dhzOCo"
    role="img"
    src="test.jpg" />
  <img
    aria-label="Test3 is inactive"
    className="snIQS"
    role="img"
    src="test.jpg" />
  <img
    aria-label="Test4 is inactive"
    className="snIQS"
    role="img"
    src="test.jpg" />
</span>
`;

exports[`test the subscription component with plugins without active subscriptions using the default matches the snapshot 1`] = `
<span>
  <img
    aria-label="Test is inactive"
    className="snIQS"
    role="img"
    src="test.jpg" />
  <img
    aria-label="Test2 is inactive"
    className="snIQS"
    role="img"
    src="test.jpg" />
  <img
    aria-label="Test3 is inactive"
    className="snIQS"
    role="img"
    src="test.jpg" />
  <img
    aria-label="Test4 is inactive"
    className="snIQS"
    role="img"
    src="test.jpg" />
</span>
`;

exports[`test the subscription component without plugins or active subscriptions using the default matches the snapshot 1`] = `<span />`;

exports[`test the subscription component without plugins with active subscriptions using the default matches the snapshot 1`] = `<span />`;
